w00t        2006/04/14 12:02:39 UTC	(20060414-5083)
  Log:
  And from configure.

  Changes:	Modified:
  +1 -2		trunk/configure (File Modified) 


w00t        2006/04/14 11:59:47 UTC	(20060414-5081)
  Log:
  Don't attempt to build dbtool, either

  Changes:	Modified:
  +1 -1		trunk/Makefile.in (File Modified) 
  +1 -5		trunk/Makefile.win32 (File Modified) 


w00t        2006/04/14 11:46:53 UTC	(20060414-5079)
  Log:
  dbtool is long not relevant, use the contrib module instead.

  Changes:	Modified:
  + -		trunk/dbtool/ (File Deleted) 


w00t        2006/04/14 11:45:22 UTC	(20060414-5077)
  Log:
  Strict fixes.

  Changes:	Modified:
  +0 -1		trunk/modules/nickserv/ghost.c (File Modified) 
  +0 -1		trunk/modules/nickserv/help.c (File Modified) 
  +3 -1		trunk/modules/nickserv/identify.c (File Modified) 
  +8 -4		trunk/modules/nickserv/info.c (File Modified) 
  +14 -9	trunk/modules/nickserv/resetpass.c (File Modified) 


jilles      2006/04/14 11:44:03 UTC	(20060414-5075)
  Log:
  Declare environ.
  

  Changes:	Modified:
  +4 -0		trunk/src/atheme.c (File Modified) 


w00t        2006/04/14 11:16:18 UTC	(20060414-5073)
  Log:
  Strict fixes for chanserv.

  Changes:	Modified:
  +1 -7		trunk/modules/chanserv/close.c (File Modified) 
  +1 -4		trunk/modules/chanserv/drop.c (File Modified) 
  +0 -2		trunk/modules/chanserv/flags.c (File Modified) 
  +0 -1		trunk/modules/chanserv/info.c (File Modified) 
  +0 -1		trunk/modules/chanserv/register.c (File Modified) 
  +1 -3		trunk/modules/chanserv/template.c (File Modified) 
  +0 -2		trunk/modules/chanserv/why.c (File Modified) 
  +0 -5		trunk/modules/chanserv/xop.c (File Modified) 


w00t        2006/04/14 10:50:44 UTC	(20060414-5071)
  Log:
  More strict fixes, somehow I missed these yesterday. Onto modules.

  Changes:	Modified:
  +0 -1		trunk/src/help.c (File Modified) 
  +0 -1		trunk/src/servtree.c (File Modified) 


w00t        2006/04/14 09:03:55 UTC	(20060414-5069)
  Log: